@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Fri Jun 24 20:48:33 2016 -->
+<!-- CreationDate: Tue Jul 12 16:19:33 2016 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -242,7 +242,7 @@ with -f or -n.</p></td></tr>
 <p style="margin-left:22%;">Only include annotations that
 match <i>regex.</i></p>
 
-<p style="margin-left:11%;"><b>&minus;t
+<p style="margin-left:11%;"><b>&minus;-type
 &rsquo;regex&rsquo;</b></p>
 
 <p style="margin-left:22%;">Only open files whose type (as
@@ -594,8 +594,8 @@ Doc</p>
 <p style="margin-left:11%; margin-top: 1em">or by file
 type:</p>
 
-<p style="margin-left:22%; margin-top: 1em">$ taskopen 1 -t
-PDF</p>
+<p style="margin-left:22%; margin-top: 1em">$ taskopen 1
+--type PDF</p>
 
 <p style="margin-left:11%; margin-top: 1em">Filter options
 and taskwarrior attributes can be used in any
